feature: add index.html

--- a/index.html
+++ b/index.html
@@ -1,21 +1,53 @@
-<html>
-    <head>
-        <title>
-            Olá eu sou a cabeça
-        </title>
-    </head>
-    <body>
-        <h1> Eu sou o corpo </h1>
-        <h2> Eu Sou o corpo </h2>
-    </body>
-    <ol>
-        <li>Café </li>
-        <li>Chá</li>
-        <li>Leite </li>
-    </ol>
-    <ul>
-        <li>Café </li>
-        <li>Chá</li>
-        <li>Leite </li>
-    </ul>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fernanda Moraes CV</title>
+
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <main class="resume-contents">
+        <section class="left-section">
+            <section class="left-section-content">
+                <div class="profile">
+                    <img class="profile-image" src="img/profile-image.png" alt="Profile image">
+                    <p class="name">Fernanda Moraes</p>
+                    <p class="Profession"> Dev</p>
+                </div>
+                <div class="contact-info">
+                    <p class="left-title">Contato</p>
+                    <ul>
+                        <li><i class="fa fa-phone">+55 99999-1111</i></li>
+                        <li><i class="fa fa-envelope">larizzafernanda2@gmail.com</i></li>
+                        <li><i class="fa fa-globe">www.sitedoamanhã.com</i></li>
+                        <li><i class="fa fa-github">FernandaLMM</i></li>
+                    </ul>
+                </div>
+                <div class="skills">
+                    <p class="left-title">Skills</p>
+                    <ul>
+                        <li><p>HTML, CSS, Git & Github</p></li>
+                        <li><p>Word, Excel, Power-point</p></li>
+                    </ul>
+                </div>
+            </section>
+        </section>
+        <section class="right-section">
+            <div class="righ-section-contents">
+                <section class="About gap">
+                    <div class="right-title">Sobre Mim</div>
+                    <p class="about-me-contents">
+                        Olá, sou a Fernanda<br>
+                        <br> Um pouco do que faço 
+                        <br> Quais são minhas competencias</p>
+                    </p>
+                </section>
+            </div>
+        </section>
+    </main>
+    
+</body>
 </html>
