--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="profile">
                     <img class="profile-image" src="img/profile-image.png" alt="Profile image">
                     <p class="name">Fernanda Moraes</p>
-                    <p class="Profession"> Dev</p>
+                    <p class="profession"> Dev</p>
                 </div>
                 <div class="contact-info">
                     <p class="left-title">Contato</p>
@@ -46,6 +46,31 @@
                     </p>
                 </section>
             </div>
+        <section class="experience gap">
+            <div class="right-title">Experience</div>
+            <div class="experience-contents">
+                <div class="exp-left">
+                    <p class="exp-company-name">Empresa 01</p>
+                    <p class="exp-time-period">2021-Present</p>
+                </div>
+                <div class="exp-right">
+                    <p class="exp-position">Engenheiro de Software</p>
+                    <p class="exp-desc">
+                        Descreva aqui as principais atividades da empresa 01
+                    </p>
+                </div>
+                <div class="exp-left">
+                    <p class="exp-company-name">Empresa 01</p>
+                    <p class="exp-time-period">2017-2021</p>
+                </div>
+                <div class="exp-right">
+                    <p class="exp-position">Engenheiro de Software</p>
+                    <p class="exp-desc">
+                        Descreva aqui as principais atividades da empresa 02
+                    </p>
+                </div>
+            </div>
+        </section>
         </section>
     </main>
     
