feature-add-school-academy

--- a/index.html
+++ b/index.html
@@ -8,71 +8,91 @@
 
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <main class="resume-contents">
-        <section class="left-section">
-            <section class="left-section-content">
-                <div class="profile">
-                    <img class="profile-image" src="img/profile-image.png" alt="Profile image">
-                    <p class="name">Fernanda Moraes</p>
-                    <p class="profession"> Dev</p>
-                </div>
-                <div class="contact-info">
-                    <p class="left-title">Contato</p>
-                    <ul>
-                        <li><i class="fa fa-phone">+55 99999-1111</i></li>
-                        <li><i class="fa fa-envelope">larizzafernanda2@gmail.com</i></li>
-                        <li><i class="fa fa-globe">www.sitedoamanhã.com</i></li>
-                        <li><i class="fa fa-github">FernandaLMM</i></li>
-                    </ul>
-                </div>
-                <div class="skills">
-                    <p class="left-title">Skills</p>
-                    <ul>
-                        <li><p>HTML, CSS, Git & Github</p></li>
-                        <li><p>Word, Excel, Power-point</p></li>
-                    </ul>
-                </div>
-            </section>
-        </section>
-        <section class="right-section">
-            <div class="righ-section-contents">
-                <section class="About gap">
-                    <div class="right-title">Sobre Mim</div>
-                    <p class="about-me-contents">
-                        Olá, sou a Fernanda<br>
-                        <br> Um pouco do que faço 
-                        <br> Quais são minhas competencias</p>
-                    </p>
+    <body>
+        <main class="resume-contents">
+            <section class="left-section">
+                <section class="left-section-content">
+                    <div class="profile">
+                        <img class="profile-image" src="img/profile-image.png" alt="Profile image">
+                        <p class="name">Fernanda Moraes</p>
+                        <p class="profession"> Dev</p>
+                    </div>
+                    <div class="contact-info">
+                        <p class="left-title">Contato</p>
+                        <ul>
+                            <li><i class="fa fa-phone">+55 99999-1111</i></li>
+                            <li><i class="fa fa-envelope">larizzafernanda2@gmail.com</i></li>
+                            <li><i class="fa fa-globe">www.sitedoamanhã.com</i></li>
+                            <li><i class="fa fa-github">FernandaLMM</i></li>
+                        </ul>
+                    </div>
+                    <div class="skills">
+                        <p class="left-title">Skills</p>
+                        <ul>
+                            <li><p>HTML, CSS, Git & Github</p></li>
+                            <li><p>Word, Excel, Power-point</p></li>
+                        </ul>
+                    </div>
                 </section>
-            </div>
-        <section class="experience gap">
-            <div class="right-title">Experience</div>
-            <div class="experience-contents">
-                <div class="exp-left">
-                    <p class="exp-company-name">Empresa 01</p>
-                    <p class="exp-time-period">2021-Present</p>
+            </section>
+            <section class="right-section">
+                <div class="righ-section-contents">
+                    <section class="About gap">
+                        <div class="right-title">Sobre Mim</div>
+                        <p class="about-me-contents">
+                            Olá, sou a Fernanda<br>
+                            <br> Um pouco do que faço 
+                            <br> Quais são minhas competencias</p>
+                        </p>
+                    </section>
                 </div>
-                <div class="exp-right">
-                    <p class="exp-position">Engenheiro de Software</p>
-                    <p class="exp-desc">
-                        Descreva aqui as principais atividades da empresa 01
-                    </p>
-                </div>
-                <div class="exp-left">
-                    <p class="exp-company-name">Empresa 01</p>
-                    <p class="exp-time-period">2017-2021</p>
-                </div>
-                <div class="exp-right">
-                    <p class="exp-position">Engenheiro de Software</p>
-                    <p class="exp-desc">
-                        Descreva aqui as principais atividades da empresa 02
-                    </p>
-                </div>
-            </div>
-         </section>
-        </section>
-    </main>
-    
-</body>
+                <section class="experience gap">
+                    <div class="right-title">Experience</div>
+                    <div class="experience-contents">
+                        <div class="exp-left">
+                            <p class="exp-company-name">Empresa 01</p>
+                            <p class="exp-time-period">2021-Present</p>
+                        </div>
+                        <div class="exp-right">
+                            <p class="exp-position">Engenheiro de Software</p>
+                            <p class="exp-desc">
+                                Descreva aqui as principais atividades da empresa 01
+                            </p>
+                        </div>
+                        <div class="exp-left">
+                            <p class="exp-company-name">Empresa 01</p>
+                            <p class="exp-time-period">2017-2021</p>
+                        </div>
+                        <div class="exp-right">
+                            <p class="exp-position">Engenheiro de Software</p>
+                            <p class="exp-desc">
+                                Descreva aqui as principais atividades da empresa 02
+                            </p>
+                        </div>
+                    </div>
+                </section>
+                <section class="education gap">
+                    <div class="right-title">Formação Academica</div>
+                        <div class="education-contents">
+                        <div class="education-left">
+                            <p class="education-school-name">PUC</p>
+                            <p class="education-time-period">2021 - 2023</p>
+                        </div>
+                        <div class="education-right">
+                            <p class="education-subject">Engenharia de Software</p>
+                            <p class="education-desc">Pós Graduação em engenharia de Software</p>
+                        </div>  
+                        <div class="education-left">
+                            <p class="education-school-name">USP</p>
+                            <p class="education-time-period">2015 - 2018</p>
+                        </div>
+                        <div class="education-right">
+                            <p class="education-subject">Engenharia da Computação</p>
+                            <p class="education-desc">Graduação em engenharia de Software</p>
+                        </div>  
+                    </div>              
+                </section>
+            </section>
+        </main>
+    </body>
 </html>
