--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
                             Olá, sou a Fernanda<br>
                             <br> Um pouco do que faço 
                             <br> Quais são minhas competencias</p>
-                        </p>
                     </section>
                 </div>
                 <section class="experience gap">
@@ -55,9 +54,7 @@
                         </div>
                         <div class="exp-right">
                             <p class="exp-position">Engenheiro de Software</p>
-                            <p class="exp-desc">
-                                Descreva aqui as principais atividades da empresa 01
-                            </p>
+                            <p class="exp-desc">Descreva aqui as principais atividades da empresa 01</p>
                         </div>
                         <div class="exp-left">
                             <p class="exp-company-name">Empresa 01</p>
@@ -65,9 +62,7 @@
                         </div>
                         <div class="exp-right">
                             <p class="exp-position">Engenheiro de Software</p>
-                            <p class="exp-desc">
-                                Descreva aqui as principais atividades da empresa 02
-                            </p>
+                            <p class="exp-desc">Descreva aqui as principais atividades da empresa 02</p>
                         </div>
                     </div>
                 </section>
@@ -88,9 +83,7 @@
                         </div>
                         <div class="education-right">
                             <p class="education-subject">Engenharia da Computação</p>
-                            <p class="education-desc">Graduação em engenharia de Software</p>
-                        </div>  
-                    </div>              
+                            <p class="education-desc">Graduação em engenharia de Software</p>            
                 </section>
             </section>
         </main>
