featura:css-style

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fernanda Moraes CV</title>
-
+    <link rel="preconnect" href="htpps://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
     <body>
@@ -36,7 +39,7 @@
                 </section>
             </section>
             <section class="right-section">
-                <div class="righ-section-contents">
+                <div class="right-section-contents">
                     <section class="About gap">
                         <div class="right-title">Sobre Mim</div>
                         <p class="about-me-contents">
@@ -44,7 +47,6 @@
                             <br> Um pouco do que faço 
                             <br> Quais são minhas competencias</p>
                     </section>
-                </div>
                 <section class="experience gap">
                     <div class="right-title">Experience</div>
                     <div class="experience-contents">
@@ -106,6 +108,7 @@
                         </div>
                     </div>
                 </section>
+                </div>
             </section>
         </main>
     </body>
